--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,21 @@
+cachelib==0.10.2
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+dnspython==2.5.0
 Flask==2.2.5
-Flask-PyMongo
-Flask-OAuthlib
-requests
-gunicorn
-python-dotenv
+Flask-OAuthlib==0.9.6
+Flask-PyMongo==2.3.0
+gunicorn==21.2.0
+idna==3.6
+itsdangerous==2.1.2
+Jinja2==3.1.3
+MarkupSafe==2.1.5
+oauthlib==2.1.0
+packaging==23.2
+pymongo==4.6.1
+python-dotenv==1.0.1
+requests==2.31.0
+requests-oauthlib==1.1.0
+urllib3==2.2.0
+Werkzeug==3.0.1
