--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,45 @@
-cachelib==0.10.2
-certifi==2024.2.2
-charset-normalizer==3.3.2
-click==8.1.7
-dnspython==2.5.0
+aiohttp==3.8.4
+aiosignal==1.3.1
+async-timeout==4.0.2
+attrs==23.1.0
+blinker==1.6.2
+certifi==2023.5.7
+charset-normalizer==3.1.0
+click==8.1.3
+colorama==0.4.6
+convertapi==1.6.0
 Flask==2.2.5
-Flask-OAuthlib==0.9.6
-Flask-PyMongo==2.3.0
-gunicorn==21.2.0
-idna==3.6
+Flask-Cors==3.0.10
+frozenlist==1.3.3
+grpcio==1.53.0
+grpcio-tools==1.53.0
+idna==3.4
+importlib-metadata==6.6.0
 itsdangerous==2.1.2
-Jinja2==3.1.3
-MarkupSafe==2.1.5
-oauthlib==2.1.0
-packaging==23.2
-pymongo==4.6.1
-python-dotenv==1.0.1
-requests==2.31.0
-requests-oauthlib==1.1.0
-urllib3==2.2.0
-Werkzeug==3.0.1
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+multidict==6.0.4
+numpy==1.21.6
+openai==0.27.6
+opencv-python==4.7.0.72
+param==1.13.0
+Pillow==9.5.0
+protobuf==4.21.12
+requests==2.30.0
+six==1.16.0
+stability-sdk==0.8.0
+tqdm==4.65.0
+urllib3==2.0.2
+waitress==2.1.2
+Werkzeug==2.2.3
+yarl==1.9.2
+zipp==3.15.0
+Flask-WTF
+g4f
+flask-restful==0.3.10
+Flask-OAuthlib
+dnspython
+pymongo
+gunicorn
+python-dotenv
+Flask-PyMongo
